# treehouse-bot

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Cargo_.toml  Dockerfile  Procfile  README.md  bot.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  netlify.toml  package.json  renovate.json  server.Dockerfile  turbo.json
.github/actions/build-docker-image-cache/: action.yml
.github/actions/publish-docker-image/: action.yml  run.sh
.github/actions/scan-docker-image/: action.yml
.github/actions/update-docker-image-prod/: action.yml
.github/containerscan/: allowedlist.yaml
.github/workflows/: deploy-bot.yml  deploy-server.yml  docker-images.yml  heroku-deploy-merge.yml  pr-image-build-scan.yml  push-to-prod.yml  supabase-test.yml  tests.yml
app/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
app/src/: client.ts
app/src/commands/: ping.ts
app/src/events/: common.ts
apps/bot/: Dockerfile  README.md  jest.config.ts  package.json  tsconfig.json
apps/bot/src/: bot.ts  config.ts  globals.ts
apps/server/: .gitignore  Dockerfile  README.md  jest.config.ts  package.json  tsconfig.json
apps/server/src/: app.ts  (+2 more)
apps/web/: README.md  app.vue  next.config.js  nuxt.config.ts  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
src/: main.rs  main_.rs  main__.rs  util.rs
src/commands/: amongass.rs  mod.rs  sheesh.rs
src/types/: mod.rs  soundstore.rs
supabase/: config.json
supabase/migrations/: 20220103035951_remote_commit.sql
volumes/: README.md
(+90 files in other folders)
