[package]
name = "AhmadBot"
version = "0.1.0"
authors = ["Joshua Ji <joshuanianji@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.serenity]
version = "0.9.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]