[package]
authors = ["my name <my@email.address>"]
edition = "2018"
name = "ahmad-bot"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[dependencies.songbird]
version = "0.1.6"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "cache", "http", "rustls_backend"]
version = "0.10"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"
